--- a/index.html
+++ b/index.html
@@ -12,7 +12,17 @@
     <img src="./images/header__logo.svg" alt="Место" class="header__logo">
   </header>
   <main class="main">
-
+    <section class="profile">
+      <div class="profile__three-columns">
+        <img src="./images/profile__avatar.png" alt="Аватар" class="profile__avatar">
+        <div class="profile__name-info">
+          <h2 class="profile__name">Жак Ив Кусто</h2>
+           <p class="profile__info">Исследователь океана</p>
+        </div>
+        <img src="./images/profile__edit.svg" alt="Конфигурация" class="profile__edit-button">
+      </div>
+      <img src="./images/profile__add-button.svg" alt="Добавить" class="profile__add-button">
+    </section>
   </main>
   <footer class="footer">
 
