feat: сделать адаптив для блока profile.Сделать затемнение для кнопок и изменить курсор

--- a/index.html
+++ b/index.html
@@ -13,15 +13,14 @@
   </header>
   <main class="main">
     <section class="profile">
-      <div class="profile__three-columns">
+      <div class="profile__two-columns">
         <img src="./images/profile__avatar.png" alt="Аватар" class="profile__avatar">
         <div class="profile__name-info">
-          <h2 class="profile__name">Жак Ив Кусто</h2>
+          <h2 class="profile__name">Жак Ив Кусто<img src="./images/profile__edit.svg" alt="Конфигурация" class="blackout profile__edit-button"></h2>
            <p class="profile__info">Исследователь океана</p>
         </div>
-        <img src="./images/profile__edit.svg" alt="Конфигурация" class="profile__edit-button">
       </div>
-      <img src="./images/profile__add-button.svg" alt="Добавить" class="profile__add-button">
+      <div class="blackout profile__add-button"> <img src="images/profile__plus.png" class="profile__plus-button"></div>
     </section>
   </main>
   <footer class="footer">
