feat: сделать футер+исправить баги

--- a/index.html
+++ b/index.html
@@ -20,11 +20,55 @@
            <p class="profile__info">Исследователь океана</p>
         </div>
       </div>
-      <div class="blackout profile__add-button"> <img src="images/profile__plus.png" class="profile__plus-button"></div>
+      <div class="blackout profile__add-button"><img src="images/profile__plus.png" class="profile__plus-button" alt="Плюс"></div>
+    </section>
+    <section class="elements">
+      <div class="element">
+        <div class="element__img element__img_background_karachaevsk"></div>
+        <div class="element__name-like">
+          <h2 class="element__name">Карачаевск</h2>
+          <div class="blackout element__like element__like_heart_white"></div>
+        </div>
+      </div>
+      <div class="element">
+        <div class="element__img element__img_background_elbrus"></div>
+        <div class="element__name-like">
+          <h2 class="element__name">Гора Эльбрус</h2>
+          <div class="blackout element__like element__like_heart_white"></div>
+        </div>
+      </div>
+      <div class="element">
+        <div class="element__img element__img_background_dombay"></div>
+        <div class="element__name-like">
+          <h2 class="element__name">Домбай</h2>
+          <div class="blackout element__like element__like_heart_white"></div>
+        </div>
+      </div>
+      <div class="element">
+        <div class="element__img element__img_background_elbrus"></div>
+        <div class="element__name-like">
+          <h2 class="element__name">Гора Эльбрус</h2>
+          <div class="blackout element__like element__like_heart_white"></div>
+        </div>
+      </div>
+      <div class="element">
+        <div class="element__img element__img_background_dombay"></div>
+        <div class="element__name-like">
+          <h2 class="element__name">Домбай</h2>
+          <div class="blackout element__like element__like_heart_white"></div>
+        </div>
+      </div>
+      <div class="element">
+        <div class="element__img element__img_background_karachaevsk"></div>
+        <div class="element__name-like">
+          <h2 class="element__name">Карачаево-Черкессия</h2>
+          <div class="blackout element__like element__like_heart_white"></div>
+        </div>
+      </div>
     </section>
   </main>
   <footer class="footer">
-
+    <p class="footer__copyright">&copy;2022 Mesto Russia</p>
   </footer>
 </body>
 </html>
