--- a/index.html
+++ b/index.html
@@ -14,11 +14,14 @@
   <main class="main">
     <section class="profile">
       <div class="profile__two-columns">
-        <img src="./images/profile__avatar.png" alt="Аватар" class="profile__avatar">
-        <div class="profile__name-info">
-          <h2 class="profile__name">Жак Ив Кусто<img src="./images/profile__edit.svg" alt="Конфигурация" class="blackout profile__edit-button"></h2>
-           <p class="profile__info">Исследователь океана</p>
+        <div class="profile__container">
+          <img src="./images/profile__avatar.png" alt="Аватар" class="profile__avatar">
+          <div class="profile__name-info">
+            <h2 class="profile__name">Жак Ив Кусто</h2>
+            <p class="profile__info">Исследователь океана</p>
+          </div>
         </div>
+        <div class="blackout profile__edit-button"></div>
       </div>
       <div class="blackout profile__add-button"><img src="images/profile__plus.png" class="profile__plus-button" alt="Плюс"></div>
     </section>
@@ -70,5 +73,15 @@
   <footer class="footer">
     <p class="footer__copyright">&copy;2022 Mesto Russia</p>
   </footer>
+  <div class="popup">
+    <form class="popup__container">
+      <div class="blackout popup__cross"></div>
+      <h2 class="popup__title">Редактировать профиль</h2>
+      <input type="text" placeholder="Введите свое имя" class="popup__name" value="Жак Ив Кусто">
+      <input  type="text" placeholder="Укажите информацию о себе" class="popup__info" value="Исследователь океана">
+      <input type="submit" class="popup__button" value="Сохранить">
+    </form>
+  </div>
+<script src="index.js"></script>
 </body>
 </html>
