--- a/index.html
+++ b/index.html
@@ -16,55 +16,55 @@
         <div class="profile__container">
           <img src="./images/profile__avatar.png" alt="Аватар" class="profile__avatar">
           <div class="profile__name-info">
-            <h2 class="profile__name">Жак Ив Кусто</h2>
+            <h1 class="profile__name">Жак-Ив Кусто</h1>
             <p class="profile__info">Исследователь океана</p>
           </div>
         </div>
-        <div class="blackout profile__edit-button"></div>
+        <button type="button" class="blackout profile__edit-button"><img src="images/profile__edit.png" class="profile__edit-pencil"></button>
       </div>
-      <div class="blackout profile__add-button"><img src="images/profile__plus.png" class="profile__plus-button" alt="Плюс"></div>
+      <button type="button" class="blackout profile__add-button"><img src="images/profile__plus.png" class="profile__plus-button" alt="Плюс"></button>
     </section>
     <section class="elements">
       <div class="element">
-        <div class="element__img element__img_background_karachaevsk"></div>
+        <img class="element__img" src="images/element__img_background_karachaevsk.png" alt="Карачаевск">
         <div class="element__name-like">
           <h2 class="element__name">Карачаевск</h2>
-          <div class="blackout element__like element__like_heart_white"></div>
+          <button type="button" class="blackout element__like element__like_heart_white"></button>
         </div>
       </div>
       <div class="element">
-        <div class="element__img element__img_background_elbrus"></div>
+        <img class="element__img" src="images/element__img_background_elbrus.png" alt="Эльбрус">
         <div class="element__name-like">
           <h2 class="element__name">Гора Эльбрус</h2>
-          <div class="blackout element__like element__like_heart_white"></div>
+          <button type="button" class="blackout element__like element__like_heart_white"></button>
         </div>
       </div>
       <div class="element">
-        <div class="element__img element__img_background_dombay"></div>
+        <img class="element__img" src="images/element__img_background_dombay.png" alt="Домбай">
         <div class="element__name-like">
           <h2 class="element__name">Домбай</h2>
-          <div class="blackout element__like element__like_heart_white"></div>
+          <button type="button" class="blackout element__like element__like_heart_white"></button>
         </div>
       </div>
       <div class="element">
-        <div class="element__img element__img_background_elbrus"></div>
+        <img class="element__img" src="images/element__img_background_elbrus.png" alt="Эльбрус">
         <div class="element__name-like">
           <h2 class="element__name">Гора Эльбрус</h2>
-          <div class="blackout element__like element__like_heart_white"></div>
+          <button type="button" class="blackout element__like element__like_heart_white"></button>
         </div>
       </div>
       <div class="element">
-        <div class="element__img element__img_background_dombay"></div>
+        <img class="element__img" src="images/element__img_background_dombay.png" alt="Домбай">
         <div class="element__name-like">
           <h2 class="element__name">Домбай</h2>
-          <div class="blackout element__like element__like_heart_white"></div>
+          <button type="button" class="blackout element__like element__like_heart_white"></button>
         </div>
       </div>
       <div class="element">
-        <div class="element__img element__img_background_karachaevsk"></div>
+        <img class="element__img" src="images/element__img_background_karachaevsk.png" alt="Карачаевск">
         <div class="element__name-like">
           <h2 class="element__name">Карачаево-Черкессия</h2>
-          <div class="blackout element__like element__like_heart_white"></div>
+          <button type="button" class="blackout element__like element__like_heart_white"></button>
         </div>
       </div>
     </section>
@@ -73,14 +73,16 @@
     <p class="footer__copyright">&copy;2022 Mesto Russia</p>
   </footer>
   <div class="popup">
-    <form class="popup__container">
-      <div class="blackout popup__cross"></div>
+    <div class="popup__container">
+      <button type="button" class="blackout popup__cross"></button>
       <h2 class="popup__title">Редактировать профиль</h2>
-      <input type="text" placeholder="Введите свое имя" class="popup__name" value="Жак Ив Кусто">
-      <input  type="text" placeholder="Укажите информацию о себе" class="popup__info" value="Исследователь океана">
-      <input type="submit" class="popup__button" value="Сохранить">
-    </form>
+      <form class="popup__form" name="popup__form">
+        <input type="text" placeholder="Введите свое имя" class="popup__input popup__input_type_name" name="popup__name" value="">
+        <input  type="text" placeholder="Укажите информацию о себе" class="popup__input popup__input_margin popup__input_type_info" name="popup__info">
+        <input type="submit" class="popup__button" value="Сохранить" name="popup__button">
+      </form>
+    </div>
   </div>
-<script src="index.js"></script>
+<script src="scripts/index.js"></script>
 </body>
 </html>
