--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <p class="profile__info">Исследователь океана</p>
           </div>
         </div>
-        <button type="button" class="blackout profile__edit-button"><img src="images/profile__edit.png" class="profile__edit-pencil"></button>
+        <button type="button" class="blackout profile__edit-button"><img src="images/profile__edit.png" class="profile__edit-pencil" alt="Карандаш"></button>
       </div>
       <button type="button" class="blackout profile__add-button"><img src="images/profile__plus.png" class="profile__plus-button" alt="Плюс"></button>
     </section>
