hotfix: исправить замечания ревьюера

--- a/index.html
+++ b/index.html
@@ -20,51 +20,51 @@
             <p class="profile__info">Исследователь океана</p>
           </div>
         </div>
-        <button type="button" class="blackout profile__edit-button"><img src="images/profile__edit.png" class="profile__edit-pencil" alt="Карандаш"></button>
+        <button type="button" class="blackout profile__edit-button"><img src="./images/profile__edit.png" class="profile__edit-pencil" alt="Карандаш"></button>
       </div>
-      <button type="button" class="blackout profile__add-button"><img src="images/profile__plus.png" class="profile__plus-button" alt="Плюс"></button>
+      <button type="button" class="blackout profile__add-button"><img src="./images/profile__plus.png" class="profile__plus-button" alt="Плюс"></button>
     </section>
     <section class="elements">
       <div class="element">
-        <img class="element__img" src="images/element__img_background_karachaevsk.png" alt="Карачаевск">
+        <img class="element__img" src="./images/element__img_background_karachaevsk.png" alt="Карачаевск">
         <div class="element__name-like">
           <h2 class="element__name">Карачаевск</h2>
-          <button type="button" class="blackout element__like element__like_heart_white"></button>
+          <button type="button" class="element__like"></button>
         </div>
       </div>
       <div class="element">
-        <img class="element__img" src="images/element__img_background_elbrus.png" alt="Эльбрус">
+        <img class="element__img" src="./images/element__img_background_elbrus.png" alt="Эльбрус">
         <div class="element__name-like">
           <h2 class="element__name">Гора Эльбрус</h2>
-          <button type="button" class="blackout element__like element__like_heart_white"></button>
+          <button type="button" class="element__like"></button>
         </div>
       </div>
       <div class="element">
-        <img class="element__img" src="images/element__img_background_dombay.png" alt="Домбай">
+        <img class="element__img" src="./images/element__img_background_dombay.png" alt="Домбай">
         <div class="element__name-like">
           <h2 class="element__name">Домбай</h2>
-          <button type="button" class="blackout element__like element__like_heart_white"></button>
+          <button type="button" class="element__like"></button>
         </div>
       </div>
       <div class="element">
-        <img class="element__img" src="images/element__img_background_elbrus.png" alt="Эльбрус">
+        <img class="element__img" src="./images/element__img_background_elbrus.png" alt="Эльбрус">
         <div class="element__name-like">
           <h2 class="element__name">Гора Эльбрус</h2>
-          <button type="button" class="blackout element__like element__like_heart_white"></button>
+          <button type="button" class="element__like"></button>
         </div>
       </div>
       <div class="element">
-        <img class="element__img" src="images/element__img_background_dombay.png" alt="Домбай">
+        <img class="element__img" src="./images/element__img_background_dombay.png" alt="Домбай">
         <div class="element__name-like">
           <h2 class="element__name">Домбай</h2>
-          <button type="button" class="blackout element__like element__like_heart_white"></button>
+          <button type="button" class="element__like"></button>
         </div>
       </div>
       <div class="element">
-        <img class="element__img" src="images/element__img_background_karachaevsk.png" alt="Карачаевск">
+        <img class="element__img" src="./images/element__img_background_karachaevsk.png" alt="Карачаевск">
         <div class="element__name-like">
           <h2 class="element__name">Карачаево-Черкессия</h2>
-          <button type="button" class="blackout element__like element__like_heart_white"></button>
+          <button type="button" class="element__like"></button>
         </div>
       </div>
     </section>
@@ -78,7 +78,7 @@
       <h2 class="popup__title">Редактировать профиль</h2>
       <form class="popup__form" name="popup__form">
         <input type="text" placeholder="Введите свое имя" class="popup__input popup__input_type_name" name="popup__name" value="">
-        <input  type="text" placeholder="Укажите информацию о себе" class="popup__input popup__input_margin popup__input_type_info" name="popup__info">
+        <input  type="text" placeholder="Укажите информацию о себе" class="popup__input popup__input_type_info" name="popup__info">
         <input type="submit" class="popup__button" value="Сохранить" name="popup__button">
       </form>
     </div>
