feat:добавить создание новых карточек, открывание картинок удаление карточек

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       <template id="card">
         <div class="element">
           <button type="button" class="element__trash"></button>
-          <img class="element__img" src="" alt="">
+          <img class="element__img" src="#" alt="">
           <div class="element__name-like">
             <h2 class="element__name"></h2>
             <button type="button" class="element__like"></button>
@@ -74,7 +74,7 @@
 
   <div class="popup popup_open-img">
     <div class="popup__container">
-      <img class="popup__img popup__img_full-size" src="" alt="">
+      <img class="popup__img popup__img_full-size" src="#" alt="">
       <button type="button" class="blackout popup__cross popup__cross_img_close"></button>
       <p class="popup__img-name"></p>
     </div>
