feat:добавить создание новых карточек, открывание картинок удаление карточек

--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
     </div>
   </div>
 
-  <div class="popup popup__create-element">
+  <div class="popup popup_create-element">
     <div class="popup__container popup__container_width popup__container_create">
-      <button type="button" class="blackout popup__cross popup_cross_create_close"></button>
+      <button type="button" class="blackout popup__cross popup__cross_create_close"></button>
       <h2 class="popup__title">Новое место</h2>
       <form class="popup__form" name="popup__form">
         <input type="text" placeholder="Название" class="popup__input  popup__input_type_title" name="popup__name" value="">
