--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <div class="popup__container popup__container_width popup__container_create">
       <button type="button" class="blackout popup__close"></button>
       <h2 class="popup__title">Новое место</h2>
-      <form class="popup__form" name="popup__form">
+      <form id="form_create_card" class="popup__form" name="popup__form">
         <label class="popup__label">
           <input id="name-add-input" type="text" placeholder="Название" class="popup__input  popup__input_type_title" name="popup__name" value="" minlength="2" maxlength="30" required>
           <span class="name-add-input-error popup__input-error"></span>
