bug-fix:fix-bugs-from-review

--- a/src/index.html
+++ b/src/index.html
@@ -53,7 +53,7 @@
       <h2 class="popup__title">Редактировать профиль</h2>
       <form class="popup__form" name="popup__form" novalidate>
         <label class="popup__label">
-          <input id="name-edit-input" type="text" placeholder="Введите свое имя" class="popup__input popup__input_type_name" name="name" value="" minlength="2" maxlength="40" required>
+          <input id="name-edit-input" type="text" placeholder="Введите свое имя" class="popup__input popup__input_type_name" name="user" value="" minlength="2" maxlength="40" required>
           <span class="name-edit-input-error popup__input-error"></span>
         </label>
         <label class="popup__label">
@@ -71,7 +71,7 @@
       <h2 class="popup__title">Новое место</h2>
       <form id="form_create_card" class="popup__form" name="popup__form" novalidate>
         <label class="popup__label">
-          <input id="name-add-input" type="text" placeholder="Название" class="popup__input  popup__input_type_title" name="title" value="" minlength="2" maxlength="30" required>
+          <input id="name-add-input" type="text" placeholder="Название" class="popup__input  popup__input_type_title" name="name" value="" minlength="2" maxlength="30" required>
           <span class="name-add-input-error popup__input-error"></span>
         </label>
         <label class="popup__label">
