--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,9 @@
     <section class="profile">
       <div class="profile__two-columns">
         <div class="profile__container">
-          <img src="#" alt="Аватар" class="profile__avatar">
+          <div class="profile__avatar-container">
+            <img src="#" alt="Аватар" class="profile__avatar">
+          </div>
           <div class="profile__name-info">
             <h1 class="profile__name">Жак-Ив Кусто</h1>
             <p class="profile__info">Исследователь океана</p>
@@ -55,7 +57,7 @@
       <button type="button" class="blackout popup__close"></button>
       <h2 class="popup__title">Редактировать профиль</h2>
       <form class="popup__form" name="popup__form" novalidate>
-        <label class="popup__label">
+        <label class="popup__label popup__label_margin_first">
           <input id="name-edit-input" type="text" placeholder="Введите свое имя" class="popup__input popup__input_type_name" name="name" value="" minlength="2" maxlength="40" required>
           <span class="name-edit-input-error popup__input-error"></span>
         </label>
@@ -73,7 +75,7 @@
       <button type="button" class="blackout popup__close"></button>
       <h2 class="popup__title">Новое место</h2>
       <form id="form_create_card" class="popup__form" name="popup__form" novalidate>
-        <label class="popup__label">
+        <label class="popup__label popup__label_margin_first">
           <input id="name-add-input" type="text" placeholder="Название" class="popup__input  popup__input_type_title" name="name" value="" minlength="2" maxlength="30" required>
           <span class="name-add-input-error popup__input-error"></span>
         </label>
@@ -101,6 +103,20 @@
         <button type="submit" class="popup__button popup__button_remove" name="popup__button">Да</button>
       </form>
       <button type="button" class="blackout popup__close"></button>
+    </div>
+  </div>
+
+  <div class="popup popup_patch_avatar">
+    <div class="popup__container popup__container_width popup__container_create">
+      <button type="button" class="blackout popup__close"></button>
+      <h2 class="popup__title">Обновить аватар</h2>
+      <form id="form_patch_avatar" class="popup__form" name="popup__form" novalidate>
+        <label class="popup__label">
+          <input  id="url-patch-input" type="url" placeholder="Ссылка на картинку" class="popup__input popup__input_type_link" name="link" required>
+          <span class="url-patch-input-error popup__input-error"></span>
+        </label>
+        <button type="submit" class="popup__button popup__button_create" name="popup__button">Сохранить</button>
+      </form>
     </div>
   </div>
 </body>
