bug-fix:edit-review-comments

--- a/src/index.html
+++ b/src/index.html
@@ -20,8 +20,8 @@
             <img src="#" alt="Аватар" class="profile__avatar">
           </div>
           <div class="profile__name-info">
-            <h1 class="profile__name">Жак-Ив Кусто</h1>
-            <p class="profile__info">Исследователь океана</p>
+            <h1 class="profile__name"></h1>
+            <p class="profile__info"></p>
           </div>
         </div>
         <button type="button" class="blackout profile__edit-button"><img src="<%=require('./images/profile__edit.png')%>" class="profile__edit-pencil" alt="Карандаш"></button>
@@ -76,11 +76,11 @@
       <h2 class="popup__title">Новое место</h2>
       <form id="form_create_card" class="popup__form" name="popup__form" novalidate>
         <label class="popup__label popup__label_margin_first">
-          <input id="name-add-input" type="text" placeholder="Название" class="popup__input  popup__input_type_title" name="name" value="" minlength="2" maxlength="30" required>
+          <input id="name-add-input" type="text" placeholder="Название" class="popup__input  popup__input_type_title" name="name"  minlength="2" maxlength="30" required>
           <span class="name-add-input-error popup__input-error"></span>
         </label>
         <label class="popup__label">
-          <input  id="url-add-input" type="url" placeholder="Ссылка на картинку" class="popup__input popup__input_type_link" name="link" required>
+          <input  id="url-add-input" type="url" placeholder="Ссылка на картинку" class="popup__input popup__input_type_link" name="link"  required>
           <span class="url-add-input-error popup__input-error"></span>
         </label>
         <button type="submit" class="popup__button popup__button_create" name="popup__button">Создать</button>
@@ -112,7 +112,7 @@
       <h2 class="popup__title">Обновить аватар</h2>
       <form id="form_patch_avatar" class="popup__form" name="popup__form" novalidate>
         <label class="popup__label">
-          <input  id="url-patch-input" type="url" placeholder="Ссылка на картинку" class="popup__input popup__input_type_link" name="link" required>
+          <input  id="url-patch-input" type="url" placeholder="Ссылка на картинку" class="popup__input popup__input_type_link" name="link" value="" required>
           <span class="url-patch-input-error popup__input-error"></span>
         </label>
         <button type="submit" class="popup__button popup__button_create" name="popup__button">Сохранить</button>
